# notifica-sdk

./: Cargo.toml  README.md
src/: lib.rs
