[package]
name = "notifica-sdk"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/Flippico/notifica-sdk"
description = "Notifica sdk"
repository = "https://github.com/Flippico/notifica-sdk"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ['default-tls', 'json'] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
uuid = "1.17.0"
